# motif

./: CLAUDE.md  README.md  pyproject.toml
examples/: agent_compose.py  blackboard.py  deep_research.py  deep_research_v2.py  dialectic.py  prism.py  temporal_analysis.py  tree_decomposition.py  tui_demo.py  tui_full.py
examples/data/: genealogy_first_essay.txt
examples/output/: agent_compose.md  genealogy_tree.md  mechinterp_research.md  never_analysis.md  never_analysis_raw.txt
src/motif/: __init__.py  display.py  flow.py  graph.py  llm.py  prompt.py  show.py  tui.py
tests/: test_algebra.py  test_compaction.py  test_flow.py  test_flow_advanced.py  test_render_edges.py  test_trace.py
